--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-r
-	 from-white to-mentalBlue/90 dark:bg-gradient-to-r
+	 from-white to-mentalBlue/90 dark:bg-gradient-to-br
 	  dark:from-dark dark:to-[#0d0d0d]	 text-gray-800
 	   dark:text-white font-body overflow-x-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
