--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-mentalBlue/20 dark:bg-gradient-to-br
-	  dark:from-dark dark:to-[#0d0d0d]	 text-gray-800
+	<body data-sveltekit-preload-data="hover" class="bg-mentalBlue/20 dark:bg-dark	 text-gray-800
 	   dark:text-white font-body overflow-x-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
